Fix: navigation menu on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,6 +14,7 @@ body {
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     background-attachment: fixed;
+    overflow: hidden;
 }
 
 img, picture, video, canvas, svg {
